Apply review suggestion - 2